# sber_hacklab2025

./: .gitignore  CMakeLists.txt  Makefile  interface.cpp  readme.md  run_perf.sh  run_test.sh  upload_solution.sh
hackathon_internals/: correctness_tests.cpp  performance_tests.cpp  run.cpp  run.hpp  tests.hpp
src/: aes.cpp  crc.cpp  generators.cpp  own_gen.cpp  solution.hpp
